fix some minor erros